benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_Mul_Add_NormalizeBitString_iter4_error.log
=== Verification Error - Iteration 4 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_Mul_Add_NormalizeBitString.rs
Time: 2025-09-15 20:38:58

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0425]: cannot find function `pow2` in module `vstd::math`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_NormalizeBitString_impl.rs:61:52
   |
61 |         Str2Int(res@) == Str2Int(s@) * vstd::math::pow2(m as nat),
   |                                                    ^^^^ not found in `vstd::math`
   |
help: consider importing this function
   |
1  + use vstd::arithmetic::power2::pow2;
   |
help: if you import `pow2`, refer to it directly
   |
61 -         Str2Int(res@) == Str2Int(s@) * vstd::math::pow2(m as nat),
61 +         Str2Int(res@) == Str2Int(s@) * pow2(m as nat),
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.

--------------------------------------------------------------------------------

Additional Output:
error[E0425]: cannot find function `pow2` in module `vstd::math`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_NormalizeBitString_impl.rs:61:52
   |
61 |         Str2Int(res@) == Str2Int(s@) * vstd::math::pow2(m as nat),
   |                                                    ^^^^ not found in `vstd::math`
   |
help: consider importing this function
   |
1  + use vstd::arithmetic::power2::pow2;
   |
help: if you import `pow2`, refer to it directly
   |
61 -         Str2Int(res@) == Str2Int(s@) * vstd::math::pow2(m as nat),
61 +         Str2Int(res@) == Str2Int(s@) * pow2(m as nat),
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
